@@ -1,5 +1,5 @@
 /*
- * Copyright 2022 the original author or authors.
+ * Copyright 2022-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,6 +19,7 @@ package org.springframework.integration.amqp.dsl;
 import com.rabbitmq.stream.Codec;
 import com.rabbitmq.stream.Environment;
 
+import org.springframework.lang.Nullable;
 import org.springframework.rabbit.stream.listener.StreamListenerContainer;
 import org.springframework.rabbit.stream.producer.RabbitStreamTemplate;
 
@@ -26,6 +27,8 @@ import org.springframework.rabbit.stream.producer.RabbitStreamTemplate;
  * Factory class for RabbitMQ components.
  *
  * @author Gary Russell
+ * @author Artem Bilan
+ *
  * @since 6.0
  *
  */
@@ -37,8 +40,8 @@ public final class RabbitStream {
 	/**
 	 * Create an initial {@link RabbitStreamInboundChannelAdapterSpec}
 	 * with the provided {@link StreamListenerContainer}.
-	 * Note: only endpoint options are available from spec.
-	 * The {@code listenerContainer} options should be specified
+	 * The {@code streamName} or {@code superStream} must be provided after creation of this spec;
+	 * or the {@code listenerContainer} options should be specified
 	 * on the provided {@link StreamListenerContainer} using
 	 * {@link RabbitStreamInboundChannelAdapterSpec#configureContainer(java.util.function.Consumer)}.
 	 * @param listenerContainer the listenerContainer.
@@ -51,30 +54,41 @@ public final class RabbitStream {
 	/**
 	 * Create an initial {@link RabbitStreamInboundChannelAdapterSpec}
 	 * with the provided {@link Environment}.
-	 * Note: only endpoint options are available from spec.
-	 * The {@code listenerContainer} options should be specified
+	 * The {@code streamName} or {@code superStream} must be provided after creation of this spec;
+	 * or the {@code listenerContainer} options should be specified
 	 * on the provided {@link StreamListenerContainer} using
 	 * {@link RabbitStreamInboundChannelAdapterSpec#configureContainer(java.util.function.Consumer)}.
 	 * @param environment the environment.
 	 * @return the RabbitInboundChannelAdapterSLCSpec.
 	 */
 	public static RabbitStreamInboundChannelAdapterSpec inboundAdapter(Environment environment) {
-		return new RabbitStreamInboundChannelAdapterSpec(environment, null);
+		return inboundAdapter(environment, null);
 	}
 
 	/**
 	 * Create an initial {@link RabbitStreamInboundChannelAdapterSpec}
 	 * with the provided {@link Environment}.
-	 * Note: only endpoint options are available from spec.
-	 * The {@code listenerContainer} options should be specified
+	 * The {@code streamName} or {@code superStream} must be provided after creation of this spec;
+	 * or the {@code listenerContainer} options should be specified
 	 * on the provided {@link StreamListenerContainer} using
 	 * {@link RabbitStreamInboundChannelAdapterSpec#configureContainer(java.util.function.Consumer)}.
 	 * @param environment the environment.
 	 * @param codec the codec.
 	 * @return the RabbitInboundChannelAdapterSLCSpec.
 	 */
-	public static RabbitStreamInboundChannelAdapterSpec inboundAdapter(Environment environment, Codec codec) {
+	public static RabbitStreamInboundChannelAdapterSpec inboundAdapter(Environment environment, @Nullable Codec codec) {
 		return new RabbitStreamInboundChannelAdapterSpec(environment, codec);
+	}
+
+	/**
+	 * Create an initial {@link RabbitStreamMessageHandlerSpec} (adapter).
+	 * @param environment the environment.
+	 * @param streamName the name of stream to produce.
+	 * @return the RabbitStreamMessageHandlerSpec.
+	 * @since 6.1
+	 */
+	public static RabbitStreamMessageHandlerSpec outboundStreamAdapter(Environment environment, String streamName) {
+		return outboundStreamAdapter(new RabbitStreamTemplate(environment, streamName));
 	}
 
 	/**
